numpy/typing/tests/data/fail/constants.pyi
import numpy as np

np.Inf = np.Inf  # E: Cannot assign to final
np.little_endian = np.little_endian  # E: Cannot assign to final
